--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 
+	<link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Fontdiner+Swanky" rel="stylesheet">
+
+	<!-- Compiled and minified Materialize CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	<title>Burger of the Day</title>
 </head>
 
